# flappy-bird

./: CMakeLists.txt  LICENSE  README.md
include/: Constants.h  Pipe.h  Player.h
src/: Game.cpp  Game.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Pipe.cpp  Pipe.h  Player.cpp  Player.h  Scene.h  UI.cpp  UI.h  main.cpp
